// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build basic > dist 1`] = `
[
  "app.js",
  "app.json",
  "components/Navbar/Navbar.js",
  "components/Navbar/Navbar.json",
  "components/Navbar/Navbar.wxml",
  "pages/index/index.js",
  "pages/index/index.json",
  "pages/index/index.wxml",
  "sitemap.json",
  "theme.json",
]
`;

exports[`tabbar-appbar > dist 1`] = `
[
  "app-bar/index.js",
  "app-bar/index.json",
  "app-bar/index.wxml",
  "app-bar/index.wxss",
  "app.js",
  "app.json",
  "components/Navbar/Navbar.js",
  "components/Navbar/Navbar.json",
  "components/Navbar/Navbar.wxml",
  "custom-tab-bar/index.js",
  "custom-tab-bar/index.json",
  "custom-tab-bar/index.wxml",
  "custom-tab-bar/index.wxss",
  "pages/index/index.js",
  "pages/index/index.json",
  "pages/index/index.wxml",
  "sitemap.json",
  "theme.json",
]
`;
